--- a/lb.css
+++ b/lb.css
@@ -1,29 +1,38 @@
 @import url(https://fonts.googleapis.com/css?family=Shadows+Into+Light);
 @import url(https://fonts.googleapis.com/css?family=Orbitron);
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
 
 .center {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  position: relative;
+  width: min(1100px, 95vw);
+  margin: 0 auto;
+  transform: none;
   z-index: 10;
-  font-family: "Red Hat Display", sans-serif;
+  font-family: "Inter", "Red Hat Display", sans-serif;
+  padding: clamp(16px, 3vw, 32px);
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
 
 .MainRankings
 {
-  position: absolute;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 0px;
-  margin-bottom: auto;
+  position: relative;
   width:100%;
   height:100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .HeaderRankings
 {
-  height:2%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
+  color: #e2e8f0;
+  position: relative;
 }
 
 .FooterRankings
@@ -33,20 +42,22 @@
 
 #exit2
 {
-  right:10%;
-  top:10%;
+  right:16px;
+  top:16px;
 }
 
 .top3 {
   display: flex;
   justify-content: center;
   align-items: flex-end;
+  gap: 12px;
+  flex-wrap: wrap;
   
 }
 .top3 .item {
   box-sizing: border-box;
   position: relative;
-  background: white;
+  background: rgba(255,255,255,0.04);
   width: 15rem;
   height: 10rem;
   text-align: center;
@@ -55,7 +66,8 @@
   transform-origin: bottom;
   cursor: pointer;
   transition: transform 200ms ease-in-out;
-  box-shadow: 0 0 4rem 0 rgba(0, 0, 0, 0.1), 0 1rem 2rem -1rem rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 4rem 0 rgba(0, 0, 0, 0.25), 0 1rem 2rem -1rem rgba(0, 0, 0, 0.35);
+  border: 1px solid rgba(255,255,255,0.12);
 }
 
 .top3 .item .top3_pic {
@@ -84,18 +96,13 @@
   /* box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2), 0 1rem 1rem -0.5rem rgba(0, 0, 0, 0.3); */
 }
 
-.NoRankings
-{
-  display: none;
-}
-
 .top3 .item .top3_pos 
 {
   font-weight: 900;
   font-size: 2.5rem;
   margin-bottom: 0.4rem;
-  background:#006680;
-  color:orange;
+  background: linear-gradient(135deg, rgba(124, 58, 237, 0.9), rgba(34, 211, 238, 0.9));
+  color:#0b1221;
 }
 
 .top3 .item .top3_name {
@@ -133,19 +140,21 @@
 .list {
   padding-left: 2rem;
   margin: 0 auto;
+  width: min(900px, 90vw);
 }
 .list .item {
   position: relative;
   display: flex;
   align-items: center;
-  background: white;
+  background: rgba(255,255,255,0.05);
   height: 3rem;
   border-radius: 4rem;
   margin-bottom: 2rem;
   transform-origin: left;
   cursor: pointer;
   transition: transform 200ms ease-in-out;
-  box-shadow: 0 0 4rem 0 rgba(0, 0, 0, 0.1), 0 1rem 2rem -1rem rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0 4rem 0 rgba(0, 0, 0, 0.25), 0 1rem 2rem -1rem rgba(0, 0, 0, 0.35);
+  border: 1px solid rgba(255,255,255,0.12);
 }
 .list .item .list_pos {
   font-weight: 900;
@@ -156,8 +165,8 @@
   font-size: 1.25rem;
   width: 3rem;
   height:3rem;
-  color:orange;
-  /* background:#006680; */
+  color:#0b1221;
+  background: linear-gradient(135deg, rgba(124, 58, 237, 0.85), rgba(34, 211, 238, 0.85));
   z-index:1;
 }
 
@@ -197,13 +206,14 @@
 .ClearRankings {
   height:60px;
   width:60px;
-  background:#006680;
-  border: 1px solid white;
+  background: linear-gradient(135deg, rgba(239, 68, 68, 0.9), rgba(248, 113, 113, 0.85));
+  border: 1px solid rgba(255,255,255,0.16);
   border-radius:50px;
-  position:Absolute;
-  top:90px;
+  position:absolute;
+  top:50%;
   z-index:50;
-  left:180px;
+  right:60px;
+  transform: translateY(-50%);
   -webkit-transition:0.5s;
   transition:0.5s;
   cursor:pointer;
@@ -212,18 +222,20 @@
 
 .NoRankings {
   display:block;
-  height:300px;
-  width:700px;
-  background:black;
-  opacity: 0.5;
+  min-height:200px;
+  width:100%;
+  background: rgba(255,255,255,0.04);
   z-index:70;
   text-align: center;
-  color:whitesmoke;
-  font-size: 2rem;
+  color:#e2e8f0;
+  font-size: clamp(18px, 2.5vw, 28px);
   font-family:"shadows into light";
   margin-top:0;
-  top:100px;
-  padding-top: 1.5rem;
+  top:0;
+  padding: 2rem;
+  border-radius: 16px;
+  border: 1px solid rgba(255,255,255,0.1);
+  box-shadow: inset 0 1px 0 rgba(255,255,255,0.08);
 }
 
 .NoRankings.h1
